Complete HW 06: Legislative bill classification and tutoring chatbot
- Implement 3x3 experimental design for bill classification (3 models, 3 prompts)
- Add detailed prompt engineering templates (simple, detailed, reasoning)
- Create analysis scripts for performance evaluation and visualization
- Build Shiny chatbot with RAG for course tutoring assistance
- Complete writeup with results and cost-effectiveness analysis

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,23 @@ rsconnect/
 *-A.pdf
 _solutions/
 .Rproj.user
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.venv/
+*.pyc
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pytest
+.pytest_cache/
+
+# mypy
+.mypy_cache/
